// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`validatePnpmConfig > When isCI: false > when not in CI > when npmrcExists: false, hasRecommendedPnpmVersionInstalled: false, pnpmPluginSkuInstalled: false > should log appropriate messages 1`] = `
[
  [
    "
--------------------------------------------------------------------------------

    pnpm-plugin-sku is not configured correctly

    Please ensure you are on PNPM v10.13.0 or later.

    Please delete your top-level node_modules and run "pnpm add --config
    pnpm-plugin-sku && pnpm install".

--------------------------------------------------------------------------------
  ",
  ],
]
`;

exports[`validatePnpmConfig > When isCI: false > when not in CI > when npmrcExists: false, hasRecommendedPnpmVersionInstalled: false, pnpmPluginSkuInstalled: true > should log appropriate messages 1`] = `
[
  [
    "
--------------------------------------------------------------------------------

    pnpm-plugin-sku is not configured correctly

    Please ensure you are on PNPM v10.13.0 or later.

    Please delete your top-level node_modules and run "pnpm add --config
    pnpm-plugin-sku && pnpm install".

--------------------------------------------------------------------------------
  ",
  ],
]
`;

exports[`validatePnpmConfig > When isCI: false > when not in CI > when npmrcExists: false, hasRecommendedPnpmVersionInstalled: true, pnpmPluginSkuInstalled: false > should log appropriate messages 1`] = `
[
  [
    "
--------------------------------------------------------------------------------

    pnpm-plugin-sku is not configured correctly

    Please delete your top-level node_modules and run "pnpm add --config
    pnpm-plugin-sku && pnpm install".

--------------------------------------------------------------------------------
  ",
  ],
]
`;

exports[`validatePnpmConfig > When isCI: false > when not in CI > when npmrcExists: false, hasRecommendedPnpmVersionInstalled: true, pnpmPluginSkuInstalled: true > should log appropriate messages 1`] = `[]`;

exports[`validatePnpmConfig > When isCI: false > when not in CI > when npmrcExists: true, hasRecommendedPnpmVersionInstalled: false, pnpmPluginSkuInstalled: false > should log appropriate messages 1`] = `
[
  [
    "
--------------------------------------------------------------------------------

    Detected .npmrc file

    Please migrate all .npmrc configuration to pnpm-workspace.yaml and add
    .npmrc to your .gitignore. See https://pnpm.io/settings for more
    information.

--------------------------------------------------------------------------------
  ",
  ],
  [
    "
--------------------------------------------------------------------------------

    pnpm-plugin-sku is not configured correctly

    Please ensure you are on PNPM v10.13.0 or later.

    Please delete your top-level node_modules and run "pnpm add --config
    pnpm-plugin-sku && pnpm install".

--------------------------------------------------------------------------------
  ",
  ],
]
`;

exports[`validatePnpmConfig > When isCI: false > when not in CI > when npmrcExists: true, hasRecommendedPnpmVersionInstalled: false, pnpmPluginSkuInstalled: true > should log appropriate messages 1`] = `
[
  [
    "
--------------------------------------------------------------------------------

    Detected .npmrc file

    Please migrate all .npmrc configuration to pnpm-workspace.yaml and add
    .npmrc to your .gitignore. See https://pnpm.io/settings for more
    information.

--------------------------------------------------------------------------------
  ",
  ],
  [
    "
--------------------------------------------------------------------------------

    pnpm-plugin-sku is not configured correctly

    Please ensure you are on PNPM v10.13.0 or later.

    Please delete your top-level node_modules and run "pnpm add --config
    pnpm-plugin-sku && pnpm install".

--------------------------------------------------------------------------------
  ",
  ],
]
`;

exports[`validatePnpmConfig > When isCI: false > when not in CI > when npmrcExists: true, hasRecommendedPnpmVersionInstalled: true, pnpmPluginSkuInstalled: false > should log appropriate messages 1`] = `
[
  [
    "
--------------------------------------------------------------------------------

    Detected .npmrc file

    Please migrate all .npmrc configuration to pnpm-workspace.yaml and add
    .npmrc to your .gitignore. See https://pnpm.io/settings for more
    information.

--------------------------------------------------------------------------------
  ",
  ],
  [
    "
--------------------------------------------------------------------------------

    pnpm-plugin-sku is not configured correctly

    Please delete your top-level node_modules and run "pnpm add --config
    pnpm-plugin-sku && pnpm install".

--------------------------------------------------------------------------------
  ",
  ],
]
`;

exports[`validatePnpmConfig > When isCI: false > when not in CI > when npmrcExists: true, hasRecommendedPnpmVersionInstalled: true, pnpmPluginSkuInstalled: true > should log appropriate messages 1`] = `
[
  [
    "
--------------------------------------------------------------------------------

    Detected .npmrc file

    Please migrate all .npmrc configuration to pnpm-workspace.yaml and add
    .npmrc to your .gitignore. See https://pnpm.io/settings for more
    information.

--------------------------------------------------------------------------------
  ",
  ],
]
`;

exports[`validatePnpmConfig > When isCI: true > when not in CI > when npmrcExists: false, hasRecommendedPnpmVersionInstalled: false, pnpmPluginSkuInstalled: false > should log appropriate messages 1`] = `
[
  [
    "
--------------------------------------------------------------------------------

    pnpm-plugin-sku is not configured correctly

    Please ensure you are on PNPM v10.13.0 or later.

    Please delete your top-level node_modules and run "pnpm add --config
    pnpm-plugin-sku && pnpm install".

--------------------------------------------------------------------------------
  ",
  ],
]
`;

exports[`validatePnpmConfig > When isCI: true > when not in CI > when npmrcExists: false, hasRecommendedPnpmVersionInstalled: false, pnpmPluginSkuInstalled: true > should log appropriate messages 1`] = `
[
  [
    "
--------------------------------------------------------------------------------

    pnpm-plugin-sku is not configured correctly

    Please ensure you are on PNPM v10.13.0 or later.

    Please delete your top-level node_modules and run "pnpm add --config
    pnpm-plugin-sku && pnpm install".

--------------------------------------------------------------------------------
  ",
  ],
]
`;

exports[`validatePnpmConfig > When isCI: true > when not in CI > when npmrcExists: false, hasRecommendedPnpmVersionInstalled: true, pnpmPluginSkuInstalled: false > should log appropriate messages 1`] = `
[
  [
    "
--------------------------------------------------------------------------------

    pnpm-plugin-sku is not configured correctly

    Please delete your top-level node_modules and run "pnpm add --config
    pnpm-plugin-sku && pnpm install".

--------------------------------------------------------------------------------
  ",
  ],
]
`;

exports[`validatePnpmConfig > When isCI: true > when not in CI > when npmrcExists: false, hasRecommendedPnpmVersionInstalled: true, pnpmPluginSkuInstalled: true > should log appropriate messages 1`] = `[]`;

exports[`validatePnpmConfig > When isCI: true > when not in CI > when npmrcExists: true, hasRecommendedPnpmVersionInstalled: false, pnpmPluginSkuInstalled: false > should log appropriate messages 1`] = `
[
  [
    "
--------------------------------------------------------------------------------

    pnpm-plugin-sku is not configured correctly

    Please ensure you are on PNPM v10.13.0 or later.

    Please delete your top-level node_modules and run "pnpm add --config
    pnpm-plugin-sku && pnpm install".

--------------------------------------------------------------------------------
  ",
  ],
]
`;

exports[`validatePnpmConfig > When isCI: true > when not in CI > when npmrcExists: true, hasRecommendedPnpmVersionInstalled: false, pnpmPluginSkuInstalled: true > should log appropriate messages 1`] = `
[
  [
    "
--------------------------------------------------------------------------------

    pnpm-plugin-sku is not configured correctly

    Please ensure you are on PNPM v10.13.0 or later.

    Please delete your top-level node_modules and run "pnpm add --config
    pnpm-plugin-sku && pnpm install".

--------------------------------------------------------------------------------
  ",
  ],
]
`;

exports[`validatePnpmConfig > When isCI: true > when not in CI > when npmrcExists: true, hasRecommendedPnpmVersionInstalled: true, pnpmPluginSkuInstalled: false > should log appropriate messages 1`] = `
[
  [
    "
--------------------------------------------------------------------------------

    pnpm-plugin-sku is not configured correctly

    Please delete your top-level node_modules and run "pnpm add --config
    pnpm-plugin-sku && pnpm install".

--------------------------------------------------------------------------------
  ",
  ],
]
`;

exports[`validatePnpmConfig > When isCI: true > when not in CI > when npmrcExists: true, hasRecommendedPnpmVersionInstalled: true, pnpmPluginSkuInstalled: true > should log appropriate messages 1`] = `[]`;
